# cti

./: .gitignore  CONTEXT_OVERVIEW.md  LICENSE  README.md  SIM_README.md  main.py  pyproject.toml
docs/: README_streamlit.md  STATE_MAP.md  start here
infra/: Dockerfile  docker-compose.yml
services/risk/: README.md  enhanced_risk_bot.py
services/risk_bot_api/: Dockerfile  Dockerfile.evito  api_server.py  evito_api_server.py  requirements.txt
services/shared/: color_guide.py  education.py  init.sql  slack_blocks.py  test_formatters.py
services/slack_handler/: slack_socket.py  slack_socket.py.bbak
services/slackbot/: README.md  slack_risk_bot.py
services/streamlit_app/: Dockerfile  README_streamlit.md  app.py  inout_store.py  requirements.txt
